[package]

name = "dependency-update-checker"
version = "0.0.1"
authors = ["Robin Gloster <robin.gloster@mayflower.de>"]

[dependencies]
semver = "*"
hyper = "*"
#puppetfile = "*"
log = "*"
rustc-serialize = "*"
toml = "*"
eventual = "0.1.3"

[dependencies.cargo]
git = "git://github.com/rust-lang/cargo"
tag = "0.3.0"
