[package]
name = "duck"
version = "0.0.1"
authors = ["Robin Gloster <robin.gloster@mayflower.de>"]
edition = "2021"

[dependencies]
# puppetfile = "0.2.0"
anyhow = "1.0.66"
async-trait = "0.1.58"
cargo = "0.65.0"
clap = { version = "4.0.18", features = [ "derive" ] }
futures = "0.3.25"
reqwest = { version = "0.11", features = [ "rustls-tls", "json" ], default-features = false }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
semver = { version = "1.0.3", features = ["serde"] }
tokio = { version = "1.21.2", features = [ "macros", "rt-multi-thread", "signal" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "std", "fmt", "env-filter" ] }
